# goit-ds-hw-02

./: connect.py  create_table.py  create_tables.sql  ds_hw_02.db  jupiter_notebook_tests.ipynb  main.py  pyproject.toml  queries.py  seed.py
