[tool.poetry]
name = "goit-ds-hw-02"
version = "0.1.0"
description = ""
authors = ["Lis <lytvinenko.i@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.2"
Faker = "^25.0.0"
jupyter = "^1.0.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
